--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@typescript-eslint/eslint-plugin": "^3.8.0",
         "@typescript-eslint/parser": "^3.8.0",
         "dotenv": "^8.2.0",
+        "esbuild": "^0.6.18",
         "esbuild-register": "^1.0.2",
         "eslint": "^7.6.0",
         "eslint-config-prettier": "^6.11.0",
@@ -41,6 +42,7 @@
         "offline:dev": "yarn ts scripts/offline.ts dev",
         "offline:start": "yarn ts scripts/offline.ts start",
         "offline:stop": "yarn ts scripts/offline.ts stop",
+        "manual-build": "esbuild src/handler.ts --bundle --outdir=.build",
         "deploy": "sls deploy",
         "destroy": "sls remove"
     }
